# TgAnimeBot

./: Dockerfile  docker-compose.yaml  env_dist  main.py  pyproject.toml
alembic/: env.py
core/: config.py
core/db/: database.py
core/handlers/: basic.py  core.py
core/handlers/utils/: utils.py
core/keyboards/: inline.py
core/utils/: callback_data.py  states.py
