[tool.poetry]
name = "animebotaiogram"
version = "0.1.0"
description = ""
authors = ["valerii-chirkov <valery.chirkov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
aiogram = "^3.7"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
greenlet = "^2.0.2"
frozenlist = "^1.5"
multidict = "^6.1"
alembic = "^1.11.3"
pydantic-settings = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
